--- a/src/sections/Appendix.tex
+++ b/src/sections/Appendix.tex
@@ -53,10 +53,21 @@ If $\widehat{A}$ and $\widehat{B}$ do not commute, $\left[\widehat{A},\widehat{B
     \left[\hat{x},\hat{p}\right] = i\hbar
 \end{equation*}
 
-\ptitle{Useful Commutators}
+\ptitle{Rules}
+
 \noindent\begin{align*}
-    \left[c,\hat B\right]                & =0  \\
-    \left[\hat{a}_{-},\hat{a}_{+}\right] & = 1
+    \left[\hat{A}\hat{B},\hat{C}\right] & =\hat{A}\left[\hat{B},\hat{C}\right]+\left[\hat{A},\hat{C}\right]\hat{B}
+\end{align*}
+
+
+\ptitle{Useful Commutators}
+
+\noindent\begin{align*}
+    \left[c,\hat B\right]                & =0                     \\
+    \left[\hat{a}_{-},\hat{a}_{+}\right] & = 1                    \\
+    \left[\hat{x}^n,\hat{p}\right]       & = i \hbar n x^{n-1}    \\
+    \left[x,\hat{p}^2\right]             & = 2i\hbar\hat{p}       \\
+    \left[f(\hat{x}),\hat{p}\right]      & = i \hbar\frac{df}{dx}
 \end{align*}
 
 
