--- a/src/sections/03_Formalism.tex
+++ b/src/sections/03_Formalism.tex
@@ -142,8 +142,8 @@ After a measurement of an observable, the wave function \textbf{collapses} into 
           \noindent\begin{equation*}
               \langle Q\rangle=\int\Psi^{*}\hat{Q}\Psi d^{3} \mathbf{r}= \langle\Psi|\hat{Q}\Psi\rangle
           \end{equation*}\newline
-          \textbf{Restated}:
-          If the system is in a state that is an eigenstate of $\hat{Q}$, a measurement on a QM ensemble will always yield the eigenvalue $q$ of $\hat{Q}$ (e.g. determinant state of the infinite square well).
+          \textbf{Restated}:\newline
+          If the system is in a state that is an eigenstate of $\hat{Q}$, a measurement on a QM ensemble will always yield the eigenvalue $q$ of $\hat{Q}$ (e.g. determinant state of the infinite square well).\newline
           Else, a single measurement will yield one of the eigenvalues $q_n$ of $\hat{Q}$ with probability $|c_n|^2$ (e.g. general state of infinite square well).
     \item $\Psi(\mathbf{r},t)$ evolves in time according to the TDSE:
           \noindent\begin{align*}
