--- a/src/sections/Appendix.tex
+++ b/src/sections/Appendix.tex
@@ -29,7 +29,7 @@ The probability density $\rho$ is called \textbf{normalized} if
 The \textbf{expectation value} $\langle x \rangle$ can be calculated with
 
 \begin{equation*}
-    \langle x \rangle = \int_{-\infty}^{\infty} x\rho(x) dx
+    \langle x \rangle = \int_{-\infty}^{\infty} x\rho(x) dx \underbrace{{\langle \Psi|x\Psi\rangle} }_{\textsf{Dirac Notation}}
 \end{equation*}
 
 The \textbf{variance} ${\sigma_x}^2$ and \textbf{standard deviation} $\sigma_x$ is given by
