--- a/src/sections/03_Formalism.tex
+++ b/src/sections/03_Formalism.tex
@@ -42,7 +42,7 @@ Observables are represented by hermitian operators.
 The expectation value of a observable is real and thus
 \noindent\begin{align*}
     \langle Q\rangle                            & = {\langle Q\rangle}^*                                             \\
-    \langle Q\rangle=\langle f|\hat{Q} g\rangle & = \langle={\langle Q\rangle}^*  \hat{Q}f|g\rangle\quad \forall f,g
+    \langle Q\rangle=\langle f|\hat{Q} g\rangle & = \langle \hat{Q}f|g\rangle={\langle Q\rangle}^*\quad \forall f,g
 \end{align*}
 Such an operator is called a hermitian operator (applying the operator to one or the other member of an inner product yields the same result). An operator \textbf{must} be hermitian for its observable to become real. These operators are \textbf{linear} if
 \noindent\begin{equation*}
@@ -263,6 +263,12 @@ As for $\hat{x}$ one can also show for $\hat{p}$ that
           \end{enumerate}
     \item Measurement $A$ and subsequent $A$ is \textbf{deterministic} but subsequent $B$ is \textbf{probabilistic}.
 
+\end{itemize}
+
+\textbf{Remarks}:
+\begin{itemize}
+    \item The previous statements hold for two subsequent measurements, if for example, a third measurement is made, the compatability of the second and third have to be evaulated
+    \item Check the table of commutators in Appendix\ \ref{comm}
 \end{itemize}
 
 \subsubsection{General Uncertainty Principle (GUP) for Incompatible Operators}
