--- a/src/sections/Appendix.tex
+++ b/src/sections/Appendix.tex
@@ -69,10 +69,13 @@ If $\widehat{A}$ and $\widehat{B}$ do not commute, $\left[\widehat{A},\widehat{B
 \ptitle{Useful Commutators}
 
 \noindent\begin{align*}
-    \left[c,\hat B\right]                & =0                     \\
-    \left[\hat{a}_{-},\hat{a}_{+}\right] & = 1                    \\
-    \left[\hat{x}^n,\hat{p}\right]       & = i \hbar n x^{n-1}    \\
-    \left[x,\hat{p}^2\right]             & = 2i\hbar\hat{p}       \\
+    \left[c,\hat B\right]                & =0                            \\
+    \left[\hat{a}_{-},\hat{a}_{+}\right] & = 1                           \\
+    \left[\hat{x}^n,\hat{p}\right]       & = i \hbar n x^{n-1}           \\
+    \left[x,\hat{p}^2\right]             & = 2i\hbar\hat{p}              \\
+    \left[\hat{V},x\right]               & =0                            \\
+    \left[\hat{H},x\right]               & =-\frac{i\hbar}{m}\widehat{p} \\
+    \left[\hat{H}, \hat{V}\right]        & \neq 0                        \\
     \left[f(\hat{x}),\hat{p}\right]      & = i \hbar\frac{df}{dx}
 \end{align*}
 
