--- a/src/sections/Appendix.tex
+++ b/src/sections/Appendix.tex
@@ -55,9 +55,10 @@ If $\widehat{A}$ and $\widehat{B}$ do not commute, $\left[\widehat{A},\widehat{B
 
 \ptitle{Canonical Commutation Relation}
 
-\begin{equation*}
-    \left[\hat{x},\hat{p}\right] = i\hbar
-\end{equation*}
+\begin{align*}
+    \left[\hat{x},\hat{p}\right] &= i\hbar\\
+    \left[\hat{p}, \hat{x}\right] &= -i\hbar
+\end{align*}
 
 \ptitle{Rules}
 
